# PQACL

./: .gitignore  CMakeLists.txt  README.md  README.md~  main.cpp
DPF/: CMakeLists.txt  dpf.h  my_main.cpp
Network/: .README.md.un~  Client.cpp  Client.h  Makefile  README.md~  Server.cpp  Server.h  main.cpp
Network/test/: CMakeLists.txt  tests.cpp
PACL/: DataServerProtocol.cpp  DataServerProtocol.h
PVSS/: ConnectionHandler.cpp  ConnectionHandler.h  PVSS.cpp  PVSS.h  PVSSServer.cpp  PVSSServer.h  helperFunctions.h
SSSharing/: Makefile  SSSharing.h  SSSharingtestMain.cpp
SSSharing/test/: Makefile  SSSharing.cpp  SSSharingTest.cpp
ZeroKnowledgeProver/: README.md
ZeroKnowledgeProver/AccessControl/: README.md
ZeroKnowledgeProver/AccessControl/host/src/: main.rs  verifier.rs
ZeroKnowledgeProver/AccessControl/methods/guest/: Cargo.toml
ZeroKnowledgeProver/AccessControl/methods/guest/src/: main.rs
ZeroKnowledgeProver/AccessControl/res/: AccessControlProofValues.json
ZeroKnowledgeProver/DataServerPublicKey/: Cargo.toml  README.md
ZeroKnowledgeProver/DataServerPublicKey/host/: Cargo.toml
ZeroKnowledgeProver/DataServerPublicKey/host/src/: main.rs  verifier.rs
ZeroKnowledgeProver/DataServerPublicKey/methods/: Cargo.toml
ZeroKnowledgeProver/DataServerPublicKey/methods/guest/: Cargo.toml
ZeroKnowledgeProver/DataServerPublicKey/methods/guest/src/: main.rs
ZeroKnowledgeProver/DataServerPublicKey/res/: AccessControlProofValues.json  DataServer1.json  DataServer2.json
