[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "prover"
path = "src/main.rs"

[dependencies]
# fp-core = { path = "../core" }
risc0-zkp-core = "0.10.0"
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
bincode = "1.3"


