[package]
name = "pub_key_server_proof_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = [
  "std",
]}
risc0-zkp-core = "0.10.0"
json = "0.12"
